# hapi

./: .gitignore  README.md  install.sh
.github/workflows/: release.yml
cli/: package.json
cli/src/agent/: sessionFactory.ts
cli/src/api/: api.ts  apiMachine.ts  types.ts
cli/src/commands/: claude.ts  connect.ts  machines.ts  registry.ts  runner.ts  scp.ts  ssh.ts
cli/src/runner/: run.ts
cli/src/ui/: logger.ts
docs/guide/: installation.md  why-hapi.md
hapi-search/: Cargo.toml  docker-compose.yml  hapi-search.toml
hapi-search/src/: chunker.rs  config.rs  embedder.rs  hub_client.rs  indexer.rs  main.rs  models.rs  search.rs  state.rs  syncer.rs  text_extract.rs  web.rs
hapi-search/static/: app.js  index.html  style.css
happier/: Cargo.toml
happier/src/: config.rs  connection.rs  main.rs  metadata.rs  register.rs  socket.rs  tunnel.rs
hub/src/socket/: server.ts  terminalRegistry.ts  tunnelRegistry.ts
hub/src/store/: index.ts  messageStore.ts  messages.ts  sessionStore.ts  sessions.ts  types.ts
hub/src/sync/: rpcGateway.ts  sessionCache.ts  syncEngine.ts
hub/src/web/: server.ts
shared/src/: schemas.ts  sessionSummary.ts  socket.ts
web/: vite.config.ts
web/src/: App.tsx  index.css  router.tsx  sw.ts
web/src/api/: client.ts
web/src/chat/: normalize.ts  normalizeAgent.ts  presentation.ts  reducerTimeline.ts  types.ts
web/src/components/: LoginPrompt.tsx  QrLogin.tsx  SessionActionMenu.tsx  SessionChat.tsx  SessionHeader.tsx  SessionList.tsx
web/src/hooks/: useAppGoBack.ts  useFontScale.ts  useSSE.ts  useTerminalSocket.ts
web/src/lib/: assistant-runtime.ts  message-window-store.ts  query-keys.ts
(+35 files in other folders)
