[package]
name = "hapi-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hapi-search"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
