[package]
name = "happier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "happier"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "time", "signal", "macros", "io-util", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
futures-util = "0.3"
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
